--- a/RegistrationForm.html
+++ b/RegistrationForm.html
@@ -176,6 +176,7 @@ textarea{
          </section>
         </div>
       </div>
+      <!-- still some work need to be done -->
       </header>
 </body>
 </html>
