--- a/RegistrationForm.html
+++ b/RegistrationForm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="uft-8">
-<meta name = 'viewport' content="width=device-width initial-scale:1.0">
+<meta name = 'viewport' content="width=device-widthinitial-scale:1.0">
 <title>Course Registartion Form</title>
 </head>
 <style>
@@ -49,7 +49,28 @@ textarea{
    width:  -webkit-fill-available;
    height: 100px;
 }
-
+.lastrow{
+   position: relative;
+}
+h3{
+   position: absolute;
+   top: 0px;
+   left: 0px;
+   width: 10px;
+   height: 10px;
+   background-color: #4c526b;
+   animation-name: anime;
+   animation-timing-function: ease-in;
+   animation-iteration-count: infinite;
+   animation-duration: 10s;
+}
+@keyframes anime {
+   0%   {background-color:red; left:0px; top:0px;}
+   25%  {background-color:yellow; left:720px; top:0px;}
+   50%  {background-color:blue; left:720px; top:95px;}
+   75%  {background-color:green; left:0px; top:95px;}
+   100% {background-color:red; left:0px; top:0px;}
+ }
 
 </style>
 <body>
@@ -178,6 +199,7 @@ textarea{
          <section class="lastrow">
             <label for="addtional-comment">Additional Comment</label><br>
             <textarea id="addtional-comment" name="addtional-comment" type="text" placeholder=""></textarea>
+            <h3></h3>
          </section>
         </div>
       </div>
