background imd added

--- a/RegistrationForm.html
+++ b/RegistrationForm.html
@@ -19,6 +19,10 @@
    width: 50vw;
    overflow:scroll ;
    background-color: white;
+   background-image: url(./pexels-fotios-photos-1921336.jpg);
+   background-repeat: no-repeat;
+   background-position: center;
+   background-size: cover;
  }
  #innerbody{
    padding: 5px 10px;
