external css added

--- a/RegistrationForm.html
+++ b/RegistrationForm.html
@@ -1,85 +1,14 @@
 <!DOCTYPE html>
 <head>
 <meta charset="uft-8">
-<meta name = 'viewport' content="width=device-widthinitial-scale:1.0">
+<meta name = 'viewport' content="width=device-width, initial-scale=1.0">
 <title>Course Registartion Form</title>
+<script src="./Form.js"></script>
+<link rel="stylesheet" href="./Form.css">
 </head>
-<style>
- body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    height: 100vh;
-    background-color: aquamarine;
-    padding: 10px 30px;
- }
- #outerbody{
-   height: 90vh;
-   width: 50vw;
-   overflow:scroll ;
-   background-color: white;
-   background-image: url(./pexels-fotios-photos-1921336.jpg);
-   background-repeat: no-repeat;
-   background-position: center;
-   background-size: cover;
- }
- #innerbody{
-   padding: 5px 10px;
- }
-#head{
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   flex-direction: column;
-   color: #113be2;
-  /* text-indent: 100px;*/
-}
-.frow{
-   display: flex;
-   justify-content: space-between;
-}
-.srow{
-   display: flex;
-   justify-content: space-between;
-}
-.frow{
-   display: flex;
-}
-.srow,.sevenrow,.fourthrow{
-   display: flex;
-}
-textarea{
-   width:  -webkit-fill-available;
-   height: 100px;
-}
-.lastrow{
-   position: relative;
-}
-h3{
-   position: absolute;
-   top: 0px;
-   left: 0px;
-   width: 10px;
-   height: 10px;
-   background-color: #4c526b;
-   animation-name: anime;
-   animation-timing-function: ease-in;
-   animation-iteration-count: infinite;
-   animation-duration: 10s;
-}
-@keyframes anime {
-   0%   {background-color:red; left:0px; top:0px;}
-   25%  {background-color:yellow; left:720px; top:0px;}
-   50%  {background-color:blue; left:720px; top:95px;}
-   75%  {background-color:green; left:0px; top:95px;}
-   100% {background-color:red; left:0px; top:0px;}
- }
-
-</style>
 <body>
    <header id="outerbody">
-       <div id="innerbody">
+        <div id="innerbody">
         <section id="head">
          <H1 style="margin: 0;">Registration Form</H1>
          <p>Fill out the form carefully for registration</p>
@@ -206,7 +135,10 @@ h3{
             <h3></h3>
          </section>
         </div>
-      </div>
+      </div> 
       </header>
 </body>
+<script>
+
+</script>
 </html>
